syntax = "proto3";

package rivet.backend.pkg.game.namespace_validate;

import "proto/common.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	string name_id = 2;
	string display_name = 3;
}

message Response {
	message Error {
		repeated string path = 1;
	}

	repeated Error errors = 1;
}
