syntax = "proto3";

package rivet.backend.pkg.party.msg.invite_consume_fail;

import "proto/common.proto";

enum ErrorCode {
	UNKNOWN = 0;
	INVITE_NOT_FOUND = 1;
}

/// name = "msg-party-invite-consume-fail"
/// parameters = [
/// 	{ name = "query_id" },
/// ]
message Message {
	rivet.common.Uuid query_id = 1;
	ErrorCode error_code = 2;
}

